修改班级成员界面

--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -19,12 +19,12 @@
 			html,
 			body {
 				min-height: 100%;
-				background-color: white;
+				/*background-color: white;*/
 			}
 			
-			.mui-content {
+			/*.mui-content {
 				background-color: white;
-			}
+			}*/
 		</style>
 	</head>
 
@@ -36,13 +36,14 @@
 		</header>
 		<div class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
-				<ul id="gride" class="mui-table-view mui-grid-view mui-grid-9" style="background-color: transparent;">
+				<ul id="gride" class="mui-table-view mui-grid-view mui-grid-9" style="background-color: white;">
 
 				</ul>
-				<div id="show-all" class="more-container display-none">
+				<div id="show-all" class="more-container display-none" style="background-color: white;">
 					<p>查看全部群成员<span class="mui-icon mui-icon-arrowright more-arrow"></span></p>
 				</div>
-				<ul class="mui-table-view">
+				<div style="width: 100%;background-color: #E4E4E4;height: 1px;"></div>
+				<ul class="mui-table-view" style="margin-top: 20px;background-color: white;">
 					<li class="mui-table-view-cell">
 						<a class="mui-navigate-right">
 							群二维码
