--- a/JiaoBaoYun-hb/html/cloud/record_student_main.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_main.html
@@ -177,14 +177,9 @@
 				top: 44px;
 			}
 
-			.mui-btn-blue {
-				background-color: #1DB8F1;
-				border: 1px solid #1DB8F1;
-			}
-
-			.mui-btn-blue:active {
-				background-color: #e4e4e4 !important;
-				border: 1px solid #e4e4e4 !important;
+			.mui-btn-block.delete-no {
+				background-color: #e4e4e4;
+				border: 1px solid #e4e4e4;
 			}
 		</style>
 	</head>
@@ -205,7 +200,7 @@
 				</div>
 			</div>
 			<div id="commit_div">
-				<button id="commit" type="button" class="mui-btn mui-btn-blue mui-btn-block">删除</button>
+				<button id="commit" type="button" class="mui-btn mui-btn-red mui-btn-block delete-no">删除</button>
 			</div>
 		</div>
 	</body>
@@ -339,15 +334,14 @@
 						checkArray[i].querySelector('input').checked = true;
 					}
 					this.innerText = '全不选';
-					document.getElementById("title").innerText = '已选定' + checkArray.length + '个';
+					checkChange();
 				} else if(name == '全不选') {
 					var checkArray = document.querySelectorAll('.mui-checkbox');
 					for(var i = 0; i < checkArray.length; i++) {
 						checkArray[i].querySelector('input').checked = false;
 					}
 					this.innerText = '全选';
-					document.getElementById("title").innerText = '已选定0个';
-
+					checkChange();
 				}
 			});
 
@@ -400,23 +394,40 @@
 					pullRefresh.endPullUpToRefresh(true);
 					//调整顶部导航
 					showAddOrDel(1);
-					//修改安卓返回功能键
-					//显示选择按钮
+					//调整界面
 					var rowArray = document.querySelectorAll('.mui-row');
 					for(var i = 0; i < rowArray.length; i++) {
 						rowArray[i].style.paddingRight = '12%';
+						//显示选择按钮
 						var checkBox = rowArray[i].querySelector('.mui-checkbox');
 						checkBox.querySelector('input').checked = false;
+						//垂直居中显示
+						checkBox.style.marginTop = (checkBox.parentNode.offsetHeight - checkBox.offsetHeight - 32) / 2 + 'px';
 						checkBox.style.display = 'inline';
 					}
 				}
 			});
 
-			/**
-			 * 退出删除状态
-			 */
+			//退出删除状态
 			document.getElementById('cancel').addEventListener('tap', function() {
 				quitDel();
+			});
+
+			//点击checkbox
+			mui('#pullrefresh').on('change', 'input', function() {
+				checkChange();
+			});
+
+			//点击删除按钮
+			document.getElementById('commit').addEventListener('tap', function() {
+				var className = this.className;
+				if(className == 'mui-btn mui-btn-red mui-btn-block') { //允许删除
+					//选择删除
+					var checked = document.querySelectorAll('.mui-checkbox input[type=checkbox]:checked');
+					for(var i = 0; i < checked.length; i++) {
+						console.log('删除 ' + checked[i].value);
+					}
+				}
 			});
 		}
 
@@ -457,19 +468,20 @@
 					for(var i = 0; i < tempRspData.length; i++) {
 						createNotes(tempRspData[i])
 					}
+
+					if(page.pageIndex && page.pageIndex >= page.totalPage) {
+						//没有下一页
+						pullRefresh.endPullUpToRefresh(true);
+					} else {
+						if(page.pageIndex == 1) {
+							//获取第一页的数据更新当前控件
+							pullRefresh.refresh(true);
+						}
+					}
 				} else {
 					mui.toast(data.RspTxt);
 				}
 
-				if(page.pageIndex >= page.totalPage) {
-					//没有下一页
-					pullRefresh.endPullUpToRefresh(true);
-				} else {
-					if(page.pageIndex == 1) {
-						//获取第一页的数据更新当前控件
-						pullRefresh.refresh(true);
-					}
-				}
 				setTimeout(function() {
 					wd.close();
 				}, 500);
@@ -523,24 +535,24 @@
 				nameMarginTop = imageHeight + marginBottom;
 				var imageArray = data.EncAddr.split('|');
 				var thumbArray = data.EncImgAddr.split('|');
-				var html_0 = '<div class="record-imge" style="height=' + imageHeight + marginBottom + 'px' + '">';
+				var html_0 = '<div class="record-imge" style="height=' + imageHeight + marginBottom + 'px;">';
 				var html_1 = '';
 				var html_2 = ''; //显示剩余的图片数量
 				var html_3 = ''; //是否显示图片
 				for(var i = 0; i < imageArray.length; i++) {
 					if(i == 2 || i == 5 || i == 8) {
-						marginRight = 0;
+						marginRight = '0px';
 					} else {
-						marginRight = marginBottom;
+						marginRight = '2%';
 					}
 					if(i > 2) {
 						html_3 = 'display: none;';
 					}
 					if(i == 2 && imageArray.length > 3) {
-						html_2 = '<div data-id="' + data.TabId + '_' + i + '" class="record-picture-num" style="line-height: ' + (imageHeight + 1) + 'px;">+' + (imageArray.length - 3) + '</div>'
+						html_2 = '<div data-id="' + data.TabId + '_' + i + '" class="record-picture-num" style="border: 1px solid blue;line-height: ' + (imageHeight + 1) + 'px;background:red;">+' + (imageArray.length - 3) + '</div>'
 					}
-					html_1 = html_1 + '<div class="record-picture" style="width: ' + imageWidth + 'px; height: ' + imageHeight + 'px; margin-right: ' + marginRight + 'px;' + html_3 + '">\
-									' + html_2 + '<img id="img_' + data.TabId + '_' + i + '" src="' + thumbArray[i] + '" data-preview-src="' + imageArray[i] + '" data-preview-group="' + data.TabId + '" style="width:100%;visibility: hidden;" onerror="events.imageOnError(this,this.getAttribute(\'data-preview-src\'));this.style.visibility=\'visible\';" onload="if(this.offsetHeight<=this.offsetWidth){if(this.offsetHeight<' + imageHeight + '){this.style.height=\'' + imageHeight + 'px\';this.style.width=\'initial\';}this.style.marginLeft=-parseInt((this.offsetWidth-' + imageWidth + ')/2)+\'px\';}else{this.style.marginTop=-parseInt((this.offsetHeight-' + imageHeight + ')/2)+\'px\';};this.style.visibility=\'visible\';">\
+					html_1 = html_1 + '<div class="record-picture" style="width: 32%;height:' + imageHeight + 'px;margin-right: ' + marginRight + ';' + html_3 + '">\
+									' + html_2 + '<img id="img_' + data.TabId + '_' + i + '" src="' + thumbArray[i] + '" data-preview-src="' + imageArray[i] + '" data-preview-group="' + data.TabId + '" style="width:100%;visibility: hidden;" onerror="events.imageOnError(this,this.getAttribute(\'data-preview-src\'));this.style.visibility=\'visible\';" onload="if(this.offsetHeight<=this.offsetWidth){if(this.offsetHeight<this.parentNode.offsetHeight){this.style.height=this.parentNode.offsetHeight+\'px\';this.style.width=\'initial\';}this.style.marginLeft=-parseInt((this.offsetWidth-this.parentNode.offsetWidth)/2)+\'px\';}else{this.style.marginTop=-parseInt((this.offsetHeight-this.parentNode.offsetHeight)/2)+\'px\';};this.style.visibility=\'visible\';">\
 								</div>';
 				}
 				html_media = html_0 + html_1 + '</div>';
@@ -560,9 +572,9 @@
 											<div style="margin-top:' + nameMarginTop + 'px;" ><div class="dynamic-name">' + data.PublisherName + '</div></div>\
 										</div>\
 									</div>\
-									<div class="mui-input-row mui-checkbox " style="margin-right: ' + checkRight + 'px;">\
+									<div class="mui-input-row mui-checkbox" style="margin-right: ' + checkRight + 'px;">\
 										<label>&nbsp;</label>\
-										<input name="Checkbox" type="checkbox">\
+										<input name="Checkbox" type="checkbox" value="' + data.TabId + '">\
 									</div>';
 			document.getElementById(dateItem).appendChild(element);
 
@@ -613,6 +625,7 @@
 				document.getElementById("add").innerText = '全选';
 				document.getElementById("title").innerText = '已选定0个';
 			}
+			document.getElementById("commit").className = 'mui-btn mui-btn-red mui-btn-block delete-no';
 		}
 
 		/**
@@ -635,6 +648,29 @@
 			var page = JSON.parse(document.getElementById('pullrefresh').getAttribute('data-page'));
 			if(page.pageIndex < page.totalPage) {
 				pullRefresh.refresh(true);
+			}
+		}
+
+		/**
+		 * checkbox被修改后做相应的处理
+		 */
+		function checkChange() {
+			var checkBox = document.querySelectorAll('.mui-checkbox');
+			var checked = document.querySelectorAll('.mui-checkbox input[type=checkbox]:checked');
+			//console.log(checkBox.length + ' ' + checked.length);
+			//修改顶部导航数量
+			document.getElementById("title").innerText = '已选定' + checked.length + '个';
+			//修改全选按钮
+			if(checked.length == checkBox.length) {
+				document.getElementById("add").innerText = '全不选';
+			} else {
+				document.getElementById("add").innerText = '全选';
+			}
+			//修改删除按钮
+			if(checked.length == 0) {
+				document.getElementById("commit").className = 'mui-btn mui-btn-red mui-btn-block delete-no';
+			} else {
+				document.getElementById("commit").className = 'mui-btn mui-btn-red mui-btn-block';
 			}
 		}
 	</script>
