云盘首页屏蔽与档案有关的东西

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -603,7 +603,7 @@
 					//26.用户云盘顶层文件及文件夹获取
 					postFirstFile();
 					//73.（云档案）按家长获取学生档案姓名
-					postUserStudent();
+					//postUserStudent();
 					//获取学生
 					getStuList();
 					//获取班级
