--- a/JiaoBaoYun-hb/html/quan/zone_main.html
+++ b/JiaoBaoYun-hb/html/quan/zone_main.html
@@ -23,7 +23,7 @@
 				<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left common-color-white"></a>
 
 				<a id="leave" style="visibility:hidden" class="mui-icon iconfont icon-jiujiajingicon02-copy mui-pull-right""></a>
-				<a id="pub-dynamic" style="visibility:hidden" class="mui-icon iconfont icon-fabu mui-pull-right mui-plus-visible" >&nbsp;</a>
+				<a id="pub-dynamic" style="visibility:hidden" class="mui-icon iconfont icon-fabu mui-pull-right mui-plus-visible" >&nbsp&nbsp;</a>
 				<!--<a id="pub-dynamic" class="mui-icon mui-icon-compose  mui-pull-right " style="padding-left: 20px;"></a>-->
 			</div>
 		</header>
